GearsetPOC/force-app/main/default/objects/Blue_Green_Voucher_Bookings__c/Blue_Green_Voucher_Bookings__c.object-meta.xml
<CustomObject>
    <label>Blue &amp; Green Voucher Booking</label>
    <nameField>
        <displayFormat>SVB-{0000}</displayFormat>
        <label>Staff Voucher Bookings</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Blue &amp; Green Voucher Bookings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>