GearsetPOC/force-app/main/default/objects/Blue_Green_Voucher_Bookings__c/fields/Additional_Payment_Taken__c.field-meta.xml
<CustomField>
    <fullName>Additional_Payment_Taken__c</fullName>
    <label>Additional Payment Taken</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>