GearsetPOC/force-app/main/default/objects/Blue_Green_Voucher_Bookings__c/fields/Final_Chasing_Email_Has_Been_Sent__c.field-meta.xml
<CustomField>
    <fullName>Final_Chasing_Email_Has_Been_Sent__c</fullName>
    <formula>IF( NOT(ISPICKVAL(Status__c ,&quot;Vouchers Not Received&quot;)),FALSE, 
IF( (TODAY() &gt;= Date_of_Booking__c + 56),TRUE,FALSE))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Final Chasing Email Has Been Sent</label>
    <type>Checkbox</type>
</CustomField>