GearsetPOC/force-app/main/default/objects/Blue_Green_Voucher_Bookings__c/fields/Initial_Chasing_Email_Has_Been_Sent__c.field-meta.xml
<CustomField>
    <fullName>Initial_Chasing_Email_Has_Been_Sent__c</fullName>
    <formula>IF( NOT(ISPICKVAL(Status__c ,&quot;Vouchers Not Received&quot;)),FALSE,
IF( (TODAY() &gt;=   Date_of_Booking__c + 21),TRUE,FALSE))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Initial Chasing Email Has Been Sent</label>
    <type>Checkbox</type>
</CustomField>