GearsetPOC/force-app/main/default/objects/Blue_Green_Voucher_Bookings__c/fields/Line_Manager_Email__c.field-meta.xml
<CustomField>
    <fullName>Line_Manager_Email__c</fullName>
    <label>Line Manager Email</label>
    <type>Email</type>
</CustomField>