GearsetPOC/force-app/main/default/objects/Blue_Green_Voucher_Bookings__c/fields/Line_Managers_Name__c.field-meta.xml
<CustomField>
    <fullName>Line_Managers_Name__c</fullName>
    <formula>Staff_Member__r.PersonContact.Aria_Manager_s_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Line Managers Name</label>
    <type>Text</type>
</CustomField>