GearsetPOC/force-app/main/default/objects/Blue_Green_Voucher_Bookings__c/fields/No_of_Days_Between_Booking_Travel_Date__c.field-meta.xml
<CustomField>
    <fullName>No_of_Days_Between_Booking_Travel_Date__c</fullName>
    <formula>Departure_Date__c -  Date_of_Booking__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>No of Days Between Booking &amp; Travel Date</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>