GearsetPOC/force-app/main/default/objects/Blue_Green_Voucher_Bookings__c/fields/Number_of_New_Vouchers_Used__c.field-meta.xml
<CustomField>
    <fullName>Number_of_New_Vouchers_Used__c</fullName>
    <label>Number of New Vouchers Used</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>