GearsetPOC/force-app/main/default/objects/Blue_Green_Voucher_Bookings__c/fields/Pass_Number__c.field-meta.xml
<CustomField>
    <fullName>Pass_Number__c</fullName>
    <formula>LEFT(TEXT(Pass_Prefix__c),2)+&quot;-&quot;+Pass_Number_STAN__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pass Number</label>
    <type>Text</type>
</CustomField>