GearsetPOC/force-app/main/default/objects/Blue_Green_Voucher_Bookings__c/fields/Pass_Number_STAN__c.field-meta.xml
<CustomField>
    <fullName>Pass_Number_STAN__c</fullName>
    <label>Pass Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>