GearsetPOC/force-app/main/default/objects/Blue_Green_Voucher_Bookings__c/fields/Pass_Prefix__c.field-meta.xml
<CustomField>
    <fullName>Pass_Prefix__c</fullName>
    <label>Pass Prefix</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>AO_Ashford_Staff</fullName>
                <label>AO - Ashford Staff</label>
            </value>
            <value>
                <fullName>EO_Ebbsfleet_Staff</fullName>
                <label>EO - Ebbsfleet Staff</label>
            </value>
            <value>
                <fullName>SO_London_Staff</fullName>
                <label>SO - London Staff</label>
            </value>
            <value>
                <fullName>TO_Temple_Mills_Staff</fullName>
                <label>TO - Temple Mills Staff</label>
            </value>
            <value>
                <fullName>RT_Retired_Staff</fullName>
                <label>RT - Retired Eurostar Staff</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>