GearsetPOC/force-app/main/default/objects/Blue_Green_Voucher_Bookings__c/fields/PNR_s__c.field-meta.xml
<CustomField>
    <fullName>PNR_s__c</fullName>
    <label>PNR(s)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>