GearsetPOC/force-app/main/default/objects/Blue_Green_Voucher_Bookings__c/fields/Staff_Email__c.field-meta.xml
<CustomField>
    <fullName>Staff_Email__c</fullName>
    <label>Staff Email</label>
    <type>Email</type>
</CustomField>