GearsetPOC/force-app/main/default/objects/Blue_Green_Voucher_Bookings__c/fields/Staff_Member__c.field-meta.xml
<CustomField>
    <fullName>Staff_Member__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Staff Member</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Blue &amp; Green Voucher Bookings</relationshipLabel>
    <relationshipName>Blue_Green_Voucher_Bookings</relationshipName>
    <type>Lookup</type>
</CustomField>