GearsetPOC/force-app/main/default/objects/Blue_Green_Voucher_Bookings__c/fields/Staff_Member_Name_Formula__c.field-meta.xml
<CustomField>
    <fullName>Staff_Member_Name_Formula__c</fullName>
    <formula>Staff_Member__r.FirstName + &quot; &quot; +  Staff_Member__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Staff Member Name</label>
    <type>Text</type>
</CustomField>