GearsetPOC/force-app/main/default/objects/Blue_Green_Voucher_Bookings__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Vouchers Not Received</fullName>
                <default>true</default>
                <label>Vouchers Not Received</label>
            </value>
            <value>
                <fullName>Vouchers Received</fullName>
            </value>
            <value>
                <fullName>Green Voucher</fullName>
                <isActive>false</isActive>
                <label>Green Voucher</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>