GearsetPOC/force-app/main/default/objects/Blue_Green_Voucher_Bookings__c/fields/Ticket__c.field-meta.xml
<CustomField>
    <fullName>Ticket__c</fullName>
    <label>Voucher Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Green Voucher</fullName>
            </value>
            <value>
                <fullName>Blue Voucher</fullName>
                <isActive>false</isActive>
                <label>Blue Voucher</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>