GearsetPOC/force-app/main/default/objects/Blue_Green_Voucher_Bookings__c/fields/Today__c.field-meta.xml
<CustomField>
    <fullName>Today__c</fullName>
    <formula>TEXT(Today())</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Today</label>
    <type>Text</type>
</CustomField>