GearsetPOC/force-app/main/default/objects/Blue_Green_Voucher_Bookings__c/fields/Total_Number_of_Vouchers_Owed__c.field-meta.xml
<CustomField>
    <fullName>Total_Number_of_Vouchers_Owed__c</fullName>
    <formula>IF(ISPICKVAL( Ticket__c,&quot;Blue Voucher&quot;),Number_of_New_Vouchers_Used__c +  Number_of_Old_Vouchers_Used__c,NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Number of Vouchers Owed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>