GearsetPOC/force-app/main/default/objects/Blue_Green_Voucher_Bookings__c/fields/Total_Number_of_Vouchers_Used__c.field-meta.xml
<CustomField>
    <fullName>Total_Number_of_Vouchers_Used__c</fullName>
    <label>Total Number of Vouchers Used</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>