GearsetPOC/force-app/main/default/objects/Blue_Green_Voucher_Bookings__c/fields/Vouchers_Arrived__c.field-meta.xml
<CustomField>
    <fullName>Vouchers_Arrived__c</fullName>
    <label>Vouchers Arrived</label>
    <type>Date</type>
</CustomField>