GearsetPOC/force-app/main/default/objects/Blue_Green_Voucher_Bookings__c/fields/Year_of_Booking__c.field-meta.xml
<CustomField>
    <fullName>Year_of_Booking__c</fullName>
    <formula>MID(TEXT(Vouchers_Arrived__c),1,4)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Year of Booking</label>
    <type>Text</type>
</CustomField>