GearsetPOC/force-app/main/default/objects/Blue_Green_Voucher_Bookings__c/validationRules/Banned_Staff_Member.validationRule-meta.xml
<ValidationRule>
    <fullName>Banned_Staff_Member</fullName>
    <active>true</active>
    <errorConditionFormula>ISNEW() 
&amp;&amp;
Staff_Member__r.Banned_From_Making_Voucher_Bookings__c = TRUE</errorConditionFormula>
    <errorMessage>Staff Member is banned from making voucher bookings. Please advise them to contact the staff travel department</errorMessage>
</ValidationRule>