GearsetPOC/force-app/main/default/objects/Blue_Green_Voucher_Bookings__c/validationRules/Blue_Voucher_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Blue_Voucher_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL(Ticket__c,&quot;Blue Voucher&quot;)
&amp;&amp;
ISBLANK( Total_Number_of_Vouchers_Used__c )</errorConditionFormula>
    <errorDisplayField>Ticket__c</errorDisplayField>
    <errorMessage>Please enter the amount of old or new vouchers that have been used</errorMessage>
</ValidationRule>