GearsetPOC/force-app/main/default/objects/Blue_Green_Voucher_Bookings__c/validationRules/Staff_Member_is_not_elgible_for_physical.validationRule-meta.xml
<ValidationRule>
    <fullName>Staff_Member_is_not_elgible_for_physical</fullName>
    <active>true</active>
    <errorConditionFormula>Staff_Member__r.Staff_Member_is_Based_Overseas__c = TRUE</errorConditionFormula>
    <errorMessage>Member of staff is based overseas, please log this booking through the Overseas Staff Voucher Database</errorMessage>
</ValidationRule>