GearsetPOC/force-app/main/default/objects/Blue_Green_Voucher_Bookings__c/validationRules/Voucher_Number_Cannot_Be_0.validationRule-meta.xml
<ValidationRule>
    <fullName>Voucher_Number_Cannot_Be_0</fullName>
    <active>true</active>
    <errorConditionFormula>(CONTAINS(TEXT( Total_Number_of_Vouchers_Used__c ), &quot;0&quot;) 
&amp;&amp; 
NOT(CONTAINS(TEXT(Total_Number_of_Vouchers_Used__c), &quot;10&quot;) )
&amp;&amp;
NOT(CONTAINS(TEXT(Total_Number_of_Vouchers_Used__c), &quot;20&quot;) )
&amp;&amp;
NOT(CONTAINS(TEXT(Total_Number_of_Vouchers_Used__c), &quot;30&quot;) )
&amp;&amp;
NOT(CONTAINS(TEXT(Total_Number_of_Vouchers_Used__c), &quot;40&quot;) )
&amp;&amp;
NOT(CONTAINS(TEXT(Total_Number_of_Vouchers_Used__c), &quot;50&quot;) )
&amp;&amp;
NOT(CONTAINS(TEXT(Total_Number_of_Vouchers_Used__c), &quot;60&quot;) )
&amp;&amp;
NOT(CONTAINS(TEXT(Total_Number_of_Vouchers_Used__c), &quot;70&quot;) )
&amp;&amp;
NOT(CONTAINS(TEXT(Total_Number_of_Vouchers_Used__c), &quot;80&quot;) )
&amp;&amp;
NOT(CONTAINS(TEXT(Total_Number_of_Vouchers_Used__c), &quot;90&quot;) ))</errorConditionFormula>
    <errorMessage>Number of voucher used cannot be 0</errorMessage>
</ValidationRule>