GearsetPOC/force-app/main/default/objects/Blue_Green_Voucher_Bookings__c/validationRules/Vouchers_Used_Cannot_Be_Minus.validationRule-meta.xml
<ValidationRule>
    <fullName>Vouchers_Used_Cannot_Be_Minus</fullName>
    <active>true</active>
    <errorConditionFormula>CONTAINS(TEXT(Total_Number_of_Vouchers_Used__c),&quot;-&quot;)</errorConditionFormula>
    <errorMessage>Number of vouchers used cannot be minus</errorMessage>
</ValidationRule>