GearsetPOC/force-app/main/default/objects/Blue_Green_Voucher_Bookings__c/listViews/Green_Vouchers.listView-meta.xml
<ListView>
    <fullName>Green_Vouchers</fullName>
    <columns>NAME</columns>
    <columns>Date_of_Booking__c</columns>
    <columns>Departure_Date__c</columns>
    <columns>Ticket__c</columns>
    <columns>Staff_Member__c</columns>
    <columns>Pass_Number__c</columns>
    <columns>PNR_s__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Ticket__c</field>
        <operation>equals</operation>
        <value>Green Voucher</value>
    </filters>
    <label>Green Vouchers</label>
    <language>en_US</language>
</ListView>