GearsetPOC/force-app/main/default/objects/Blue_Green_Voucher_Bookings__c/listViews/Vouchers_Received.listView-meta.xml
<ListView>
    <fullName>Vouchers_Received</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Date_of_Booking__c</columns>
    <columns>Departure_Date__c</columns>
    <columns>Ticket__c</columns>
    <columns>Staff_Member__c</columns>
    <columns>Pass_Number__c</columns>
    <columns>PNR_s__c</columns>
    <columns>Total_Number_of_Vouchers_Used__c</columns>
    <columns>Staff_Email__c</columns>
    <columns>Line_Manager_Email__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Vouchers Received</value>
    </filters>
    <filters>
        <field>Ticket__c</field>
        <operation>equals</operation>
        <value>Blue Voucher</value>
    </filters>
    <label>Vouchers Received</label>
    <language>en_US</language>
</ListView>